# divemarkdownit

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  meta.yaml  pyproject.toml  setup.py
divemarkdownit/labextension/: build_log.json  package.json
divemarkdownit/labextension/static/: lib_index_js.0820abc279e44c982591.js  lib_index_js.0820abc279e44c982591.js.map  node_modules_markdown-it-task-checkbox_index_js.ebd64da0584eefb7fc4e.js  node_modules_markdown-it-task-checkbox_index_js.ebd64da0584eefb7fc4e.js.map  remoteEntry.dd1fb26c3665399a7b1b.js  remoteEntry.dd1fb26c3665399a7b1b.js.map  style.js  style_index_js.55ca49e8d0eaf6ad2055.js  style_index_js.55ca49e8d0eaf6ad2055.js.map  vendors-node_modules_markdown-it-anchor_dist_markdownItAnchor_mjs.e0c489813daca131f3bb.js  vendors-node_modules_markdown-it-anchor_dist_markdownItAnchor_mjs.e0c489813daca131f3bb.js.map  vendors-node_modules_markdown-it-diagrams_lib_index_js.e0ccee7f48fd7a167c26.js  vendors-node_modules_markdown-it-diagrams_lib_index_js.e0ccee7f48fd7a167c26.js.map  vendors-node_modules_markdown-it-docutils_dist_css_style_min_css.882e9ac087517c92dedc.js  vendors-node_modules_markdown-it-docutils_dist_css_style_min_css.882e9ac087517c92dedc.js.map  vendors-node_modules_markdown-it-docutils_dist_esm_index_js.27a72a0250a4ba21d0f8.js  vendors-node_modules_markdown-it_index_js.f2524328fc99ecd3f9d1.js  (+4 more)
examples/: admonition.ipynb
schema/: core.json
src/: index.ts  manager.ts
src/markdown-it/: index.ts  manager.ts  setting.tsx  utils.ts  values.ts  widget.ts
style/: base.css  index.js
(+9 files in other folders)
